<resources>
    <string name="app_name">Bloem Van Damascus</string>
    <string name="dismiss">Dismiss</string>
    <string name="app_is_loading">Application is loading</string>
    <string name="all_rights">© Bloem van Damascus Restaurant 2019. All Rights Reserved. BY: Ancologi</string>
    <string name="settings">Settings</string>
    <string name="policy">Privacy Policy</string>
    <string name="contact">Contact us</string>
    <string name="about_us">About us</string>
    <string name="search">Search</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="dutch">Dutch</string>
    <string name="print">Print</string>
    <string name="company_title">About us</string>
    <string name="lorem_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\\\\\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="policy_info">Information about policy</string>
    <string name="about_us_info">Information about us</string>
    <string name="contact_title">you can reach us with one of the following methods</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_lang_ar">Application Language will be set to Arabic.</string>
    <string name="confirm_lang_en">Application Language will be set to English.</string>
    <string name="confirm_lang_du">Application Language will be set to Dutch.</string>
    <string name="app_needs_to_be_update">App needs to be update</string>
    <string name="do_you_want_to_update_now">\n Do you want to update now?</string>
    <string name="from_website">From website</string>
    <string name="from_google_play">Google Play (recommended)</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="no_records_yet">No orders yet</string>
    <string name="subtitle_text">Subtitle  text Sutitle text</string>
    <string name="network_error">No Internet</string>
    <string name="order_not_found">Order not found</string>
    <string name="share_via">Share</string>
    <string name="address_label">Ginnekenweg 40</string>
    <string name="street_label">4816jG Breda</string>
    <string name="street_code_label">0765320500</string>
    <string name="order_date">Bestelling Date :</string>
    <string name="order_num">Bestelling N :</string>
    <string name="customer_name">Yahya Al-najjar</string>
    <string name="customer_city">Breda</string>
    <string name="land_mark">26 Street</string>
    <string name="email">ya7ya.alnajjar@gmail.com</string>
    <string name="phone">+963934904212</string>
    <string name="stars">*********************************</string>
    <string name="let_op">LET OP:</string>
    <string name="bestelling_is">Bestelling is</string>
    <string name="online_betaald">Online Betaald</string>
    <string name="bezorgen_zsm">Bezorgen ZSM</string>
    <string name="betalingswijze">Betalingswijze:</string>
    <string name="cach">Contant geId</string>
    <string name="website_url">bloemvandamascus.nl</string>
    <string name="tot_ziens">Tot sienz</string>
    <string name="dashes">------------------------------</string>
    <string name="min_30">after 30 Min</string>
    <string name="now">At Time</string>
    <string name="min_45">after 45 Min</string>
    <string name="min_60">after 60 Min</string>
    <string name="total">totaal</string>
    <string name="pick_delay_time">Pick delay time first</string>
    <string name="bluetooth">Bluetooth</string>
</resources>
