<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



<!--    <item-->
<!--        android:id="@+id/action_search"-->
<!--        android:icon="@drawable/ic_search_black_24dp"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/search"-->
<!--        app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/language_title"
        android:orderInCategory="90"
        android:title="@string/change_language"
        android:enabled="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/dutch"
        android:orderInCategory="100"
        android:title="@string/dutch"
        app:showAsAction="never"/>

    <item
        android:id="@+id/english"
        android:orderInCategory="100"
        android:title="@string/english"
        app:showAsAction="never"/>

    <item
        android:id="@+id/arabic"
        android:orderInCategory="100"
        android:title="@string/arabic"
        app:showAsAction="never"/>

</menu>