<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar_show_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/margin_padding_small"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:paddingStart="@dimen/margin_4X"
                    android:paddingEnd="@dimen/margin_4X"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/lblCompanyName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name" />
                    <TextView
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/lblAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address_label" />

                    <TextView
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/lblStreet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/street_label" />

                    <TextView
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/lblStreetCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/street_code_label" />
                </LinearLayout>


                <LinearLayout
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:paddingStart="@dimen/margin_4X"
                    android:paddingEnd="@dimen/margin_4X"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3"
                        android:orientation="horizontal">
                        <TextView
                            android:textColor="@color/colorPrimary"
                            android:id="@+id/lblOrderDate"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/order_date" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:id="@+id/order_date"
                            android:text="2019 9/9 - 9:00"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3"
                        android:orientation="horizontal">
                        <TextView
                            android:textSize="@dimen/text_size_normal"
                            android:textColor="@color/colorPrimary"
                            android:id="@+id/lblOrderNum"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/order_num" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:id="@+id/order_num"
                            android:text="39"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:paddingStart="@dimen/margin_4X"
                    android:paddingEnd="@dimen/margin_4X"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/customer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_name" />
                    <TextView
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/customer_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_city" />

                    <TextView
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/customer_street"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/street_label" />

                    <TextView
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/customer_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/street_code_label" />

                    <TextView
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/customer_landmark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/land_mark" />

                    <TextView
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/customer_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email" />

                    <TextView
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/customer_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/margin_4X"
                    android:paddingStart="@dimen/margin_4X"
                    android:textSize="@dimen/text_size_xxlarge"
                    android:gravity="center"
                    android:text="@string/stars"/>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/margin_4X"
                    android:paddingEnd="@dimen/margin_4X"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/let_op"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/let_op" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <TextView
                            android:textSize="@dimen/text_size_normal"
                            android:textColor="@color/colorPrimary"
                            android:id="@+id/bestelling_is"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bestelling_is" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/payment_type"
                            android:paddingStart="@dimen/margin_2X"
                            android:text="@string/online_betaald"/>
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/margin_4X"
                    android:paddingStart="@dimen/margin_4X"
                    android:textSize="@dimen/text_size_xxlarge"
                    android:gravity="center"
                    android:text="@string/stars"/>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/margin_4X"
                    android:paddingEnd="@dimen/margin_4X"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/bezorgen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bezorgen_zsm" />

                    <TextView
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/delivery_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_medium"
                        android:text="12/08/2019  17:00" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/margin_4X"
                    android:paddingStart="@dimen/margin_4X"
                    android:textSize="@dimen/text_size_xxlarge"
                    android:gravity="center"
                    android:text="@string/stars"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/items_recyclerView"
                    />
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="@dimen/margin_4X"
                android:paddingEnd="@dimen/margin_4X"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/betalingswijze"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/betalingswijze" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/payment_type2"
                        android:paddingStart="@dimen/margin_2X"
                        android:text="@string/cach"/>
                </LinearLayout>

                <TextView
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/tot_ziens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tot_ziens" />

            </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>